[gd_scene load_steps=5 format=3 uid="uid://cv6uksb7wv4ei"]

[ext_resource type="Script" path="res://Scripts/Objects/checkpoint_stars.gd" id="1_47mp2"]
[ext_resource type="AudioStream" uid="uid://be1vhgdoscd0c" path="res://Audio/SFX/Misc/s2br_SpecialWarp.wav" id="1_q6sdd"]
[ext_resource type="Texture2D" uid="uid://b6nbr2mujveni" path="res://Graphics/Misc/Checkpoint_Stars.png" id="2_eevss"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2lko"]
size = Vector2(32, 32)

[node name="CheckpointStars" type="Node2D"]
script = ExtResource("1_47mp2")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color(1, 0, 0.819608, 1)
shape = SubResource("RectangleShape2D_s2lko")

[node name="Warp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_q6sdd")
bus = &"SFX"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-32, -32, 64, 64)

[node name="Star1" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
texture = ExtResource("2_eevss")
hframes = 3

[node name="Star2" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
texture = ExtResource("2_eevss")
hframes = 3

[node name="Star3" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
texture = ExtResource("2_eevss")
hframes = 3

[node name="Star4" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
texture = ExtResource("2_eevss")
hframes = 3

[node name="waitTime" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="waitTime" to="." method="_on_timer_timeout"]
